feat: update errors table
